--- a/app/src/main/res/layout/update.xml
+++ b/app/src/main/res/layout/update.xml
@@ -1,4 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="428dp"
+    android:layout_height="926dp"
     android:background="#FFFFFF">
 
     <!-- Top Center Box with Title -->
@@ -7,6 +9,7 @@
         android:layout_width="372dp"
         android:layout_height="56dp"
         android:layout_marginTop="36dp"
+        android:layout_centerHorizontal="true"
         android:background="#6c63ff">
 
         <TextView
@@ -29,6 +32,8 @@
         android:id="@+id/filter_instruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Hãy lọc theo yêu cầu của bạn"
+        android:layout_marginTop="116dp"
         android:layout_marginStart="28dp"
         android:textColor="#000000"
         android:textSize="16sp" />
@@ -37,6 +42,8 @@
     <RelativeLayout
         android:layout_width="372dp"
         android:layout_height="56dp"
+        android:layout_marginTop="148dp"
+        android:layout_marginStart="28dp">
 
         <TextView
             android:layout_width="138dp"
@@ -58,6 +65,8 @@
     <RelativeLayout
         android:layout_width="372dp"
         android:layout_height="56dp"
+        android:layout_marginTop="216dp"
+        android:layout_marginStart="28dp">
 
         <TextView
             android:layout_width="138dp"
@@ -80,6 +89,7 @@
         android:layout_width="372dp"
         android:layout_height="25dp"
         android:layout_marginTop="284dp"
+        android:layout_marginStart="28dp"
         android:background="#6c63ff">
 
         <TextView
@@ -87,6 +97,8 @@
             android:layout_height="wrap_content"
             android:text="Danh sách sinh viên đã đóng tiền dịch vụ"
             android:textColor="#FFFFFF"
+            android:textSize="20sp"
+            android:gravity="center_vertical" />
     </RelativeLayout>
 
     <!-- Save Button -->
@@ -96,6 +108,7 @@
         android:layout_height="56dp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="28dp"
+        android:layout_marginBottom="151dp"
         android:background="#6c63ff"
         android:text="Lưu"
         android:textColor="#FFFFFF"
