--- a/app/src/main/res/layout/activity_semi_bill.xml
+++ b/app/src/main/res/layout/activity_semi_bill.xml
@@ -159,6 +159,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="36dp"
         android:layout_marginStart="28dp"
+        android:background="#6c63ff">
 
         <TextView
             android:id="@+id/confirm_text_view"
